# dsss-transfer

./: .gitignore  Makefile.am  README  configure.ac
examples/: Makefile.am  duplex.c  echo-server.c  full-duplex.c  half-duplex.sh
po/: POTFILES.in  dsss-transfer.pot  fr.po
src/: Makefile.am  dsss-transfer.c  dsss-transfer.h  dsssframe.h  dsssframegen.c  dsssframesync.c  main.c
tests/: Makefile.am  test-library-callback.c  test-library-file.c  test-program.sh
